# time-series-streaming-analytics-template

./: .gitignore  README.md  benthos-conf.yaml  docker-compose-enterprise.yml  docker-compose.yml
dashboard/grafana/: README.md  env_variables
ingestion/go/github_events/: github_events.go  go.mod
ingestion/go/trades/: go.mod  (+1 more)
ingestion/nodejs/: README.md  github_events.js  package-lock.json  package.json
ingestion/python/: github_events.py  kafka_avro_reader.py  requirements.txt  send_trades_to_kafka.py  smart_meters_send_to_kafka.py
ingestion/rust/github_events/: Cargo.toml
ingestion/rust/github_events/src/: main.rs
monitoring/: kafka_and_questdb_telegraf.conf
monitoring/kafka-agent/: README.md
monitoring/telegraf/: kafka_and_questdb_telegraf.conf
notebooks/: Data-Exploration-Of-Factory-Plant-Sensors-With-Pandas.ipynb  Data-Exploration-With-Pandas-Polars-And-Facets.ipynb  IoTEventsToQuestDB.ipynb  Kafka-connect-inspect.ipynb  KafkaTopicManagement.ipynb  Monitoring-Kafka-and-Questdb.ipynb  Parallel IoTEventsToQuestDB.ipynb  Send-Github-Events-To-Kafka.ipynb  Send-Plant-Sensors-To-QuestDB.ipynb  Send-Smart-Meters-To-Kafka.ipynb  Send-Trades-To-Kafka.ipynb  Send-Trades-To-QuestDB-Directly.ipynb  Send-Transactions-To-Kafka.ipynb  SendGithubEventsToKafka.ipynb  Time-Series-Forecasting-ML-trades.ipynb  Time-Series-Forecasting-ML.ipynb  TreasurySecurities.ipynb  connect.ipynb  data_exploration.ipynb  forecast.ipynb  parquet_arrow.ipynb  questdb-connect-and-query.ipynb
notebooks/.ipynb_checkpoints/: connect-checkpoint.ipynb
notebooks/.jupyter/: migrated
(+28 files in other folders)
