[package]
name = "github_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rdkafka = "0.26"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
